--- a/SQL/topostgres.ipynb
+++ b/SQL/topostgres.ipynb
@@ -17,22 +17,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rental_data = \"rental_data.csv\"\n",
+    "rental_data = \"Resources/rental_data.csv\"\n",
     "rental_data_metadata = pd.read_csv(rental_data)\n",
     "rental_data = pd.DataFrame(rental_data_metadata)\n",
     "\n",
-    "rand_zip_df = \"rand_zip_df.csv\"\n",
+    "rand_zip_df = \"Resources/rand_zip_df.csv\"\n",
     "rand_zip_metadata = pd.read_csv(rand_zip_df)\n",
     "rand_zip = pd.DataFrame(rand_zip_metadata)\n",
     "\n",
-    "home_prices_df = \"home_prices_df.csv\"\n",
+    "home_prices_df = \"Resources/home_prices_df.csv\"\n",
     "home_prices_metadata = pd.read_csv(home_prices_df)\n",
     "home_prices_df = pd.DataFrame(home_prices_metadata)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "[146 rows x 3 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
    "hash": "bccb4805ce86db363e28e275de0a8928d69983e97300a6bb492d4d3519390a92"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.11 64-bit ('PythonData': conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -194,8 +194,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.11"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
