--- a/SQL/topostgres.ipynb
+++ b/SQL/topostgres.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,21 +27,26 @@
     "\n",
     "home_prices_df = \"Resources/home_prices_df.csv\"\n",
     "home_prices_metadata = pd.read_csv(home_prices_df)\n",
-    "home_prices_df = pd.DataFrame(home_prices_metadata)"
+    "home_prices_df = pd.DataFrame(home_prices_metadata)\n",
+    "\n",
+    "lats_long_df = \"Resources/main_table_latslongs.csv\"\n",
+    "lats_long_metadata = pd.read_csv(lats_long_df)\n",
+    "lats_long_df = pd.DataFrame(lats_long_metadata)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "password=\"postgres\"\n",
-    "engine = create_engine(f'postgresql://postgres:{password}@localhost:5432/Rental and sale price')\n",
+    "engine = create_engine(f'postgresql://postgres:7eUTEhM4!pRdxBG@localhost:5433/Rental and sale price')\n",
     "connection = engine.connect()\n",
     "rental_data.to_sql(name='rental_data', con=engine, if_exists='append', index=False)\n",
     "rand_zip.to_sql(name='rand_zip', con=engine, if_exists='append', index=False)\n",
-    "home_prices_df.to_sql(name='home_prices_df', con=engine, if_exists='append', index=False)\n"
+    "home_prices_df.to_sql(name='home_prices_df', con=engine, if_exists='append', index=False)\n",
+    "lats_long_df.to_sql(name='lats_long_df', con=engine, if_exists='append', index=False)\n"
    ]
   },
   {
