--- a/SQL/topostgres.ipynb
+++ b/SQL/topostgres.ipynb
@@ -27,12 +27,16 @@
     "\n",
     "home_prices_df = \"Resources/home_prices_df.csv\"\n",
     "home_prices_metadata = pd.read_csv(home_prices_df)\n",
-    "home_prices_df = pd.DataFrame(home_prices_metadata)"
+    "home_prices_df = pd.DataFrame(home_prices_metadata)\n",
+    "\n",
+    "lats_long_df = \"Resources/main_table_latslongs.csv\"\n",
+    "lats_long_metadata = pd.read_csv(lats_long_df)\n",
+    "lats_long_df = pd.DataFrame(lats_long_metadata)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,12 +45,13 @@
     "connection = engine.connect()\n",
     "rental_data.to_sql(name='rental_data', con=engine, if_exists='append', index=False)\n",
     "rand_zip.to_sql(name='rand_zip', con=engine, if_exists='append', index=False)\n",
-    "home_prices_df.to_sql(name='home_prices_df', con=engine, if_exists='append', index=False)\n"
+    "home_prices_df.to_sql(name='home_prices_df', con=engine, if_exists='append', index=False)\n",
+    "lats_long_df.to_sql(name='lats_long_df', con=engine, if_exists='append', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +169,7 @@
        "[146 rows x 3 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +184,7 @@
    "hash": "bccb4805ce86db363e28e275de0a8928d69983e97300a6bb492d4d3519390a92"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.11 64-bit ('PythonData': conda)",
    "language": "python",
    "name": "python3"
   },
@@ -194,7 +199,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.11"
-  }
+  },
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
